feat: add umami code

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
-# See https://next-drupal.org/docs/environment-variables
-NEXT_PUBLIC_DRUPAL_BASE_URL=https://cms.next-drupal.org
-NEXT_IMAGE_DOMAIN=cms.next-drupal.org
+# Required
+NEXT_PUBLIC_DRUPAL_BASE_URL=https://dev-next-umami.pantheonsite.io
+NEXT_IMAGE_DOMAIN=dev-next-umami.pantheonsite.io
+
+# Required for Preview Mode
+DRUPAL_PREVIEW_SECRET=
+
+# Authentication (Bearer)
+NEXTAUTH_SECRET=
+NEXTAUTH_URL=
+DRUPAL_CLIENT_ID=
+DRUPAL_CLIENT_SECRET=
