--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "debug": "NODE_OPTIONS='--inspect' next dev",
     "preview": "next build && next start",
     "lint": "next lint"
